--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Demo Git nuevo modificado</h1>
     
+    <form action="#" method="get">
+        <input type="button" value="enviar">
+    </form>
 </body>
 </html>
